quick fix for dark mode toggle layout

--- a/docs/_sass/minima/_layout.scss
+++ b/docs/_sass/minima/_layout.scss
@@ -50,6 +50,10 @@
     }
   }
 
+  @media screen and (max-width: 1260px) {
+    margin-right: 60px;
+  }
+
   @include media-query($on-palm) {
     position: absolute;
     top: 9px;
